--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
                   </a>
                 </span>
                 <!-- Arxiv Link. -->
-                <!-- <span class="link-block">
+                <span class="link-block">
                   <a href="https://arxiv.org/abs/" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
                     <span>arXiv</span>
                   </a>
-                </span> -->
+                </span>
                 <!-- Video Link. -->
                 <!-- <span class="link-block">
                   <a href="https://www.youtube.com/"
@@ -258,6 +258,8 @@
         <!-- </div>
       </div> -->
 
+
+
       <!-- Concurrent Work. -->
       <!-- <div class="columns is-centered has-text-centered">
         <div class="column is-full-width">
@@ -269,7 +271,7 @@
               </a>
             </p>
             <p>
-              Baseline <a href="https://github.com/lllyasviel/ControlNet">LTLDoG</a>
+              Baseline <a href="https://github.com/clear-nus/ltldog">LTLDoG</a>
             </p>
           </div>
         </div>
